--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                             </ul>
                                         </li>
 										<li>
-                                            <h2>Saftware Testing at ISD Co. Ltd. (2010-2011):</h2>
+                                            <h2>Software Testing at ISD Co. Ltd. (2010-2011):</h2>
                                             <ul>
                                                 <li>
                                                     <h3>QA, Support Tasks:</h3>
